# 014-Amesis-ESP32_C3_LCD_1.28

./: README.md
Fichier/Arduino_Code_Jauge/libraries/: lv_conf.h
Fichier/Arduino_Code_Jauge/libraries/LovyanGFX/examples_for_PC/images/logs/: 70041D0745BC.txt
Fichier/Arduino_Code_Jauge/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Fichier/Arduino_Code_Jauge/libraries/ui/src/components/: ui_comp_hook.c
Fichier/Arduino_Code_Jauge/libraries/ui/src/fonts/: ui_font_Digit.c  ui_font_Font1.c
Fichier/Arduino_Code_Jauge/libraries/ui/src/images/: ui_img_1703503159.c  ui_img_2065062798.c  ui_img_285578852.c  ui_img_afr_png.c  ui_img_amesis_colo_r_transparent_png.c  ui_img_amesisproject_png.c  ui_img_background1_png.c  ui_img_boutton_png.c  ui_img_gauge_png.c  ui_img_home_png.c  ui_img_jauge_rpm_png.c  ui_img_led_png.c  ui_img_monlogo240_png.c  ui_img_turbo_gauge_png.c  ui_img_turbo_png.c
Fichier/Arduino_Code_Jauge/libraries/ui/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c
Fichier/Arduino_Code_Jauge/src/: nimconfig.h
Fichier/Arduino_Code_Jauge/ui/: ui.ino
